force-app/main/default/objects/ssot__ImpactStrategy__dlm/fields/ssot__ImpactStrategyCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ImpactStrategyCategory__c</fullName>
    <label>Impact Strategy Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ImpactStrategyCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>