force-app/main/default/objects/ssot__ImpactStrategy__dlm/fields/ssot__Level__c.field-meta.xml
<CustomField>
    <fullName>ssot__Level__c</fullName>
    <label>Level</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Level</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>