force-app/main/default/objects/ssot__ImpactStrategy__dlm/fields/ssot__ParentImpactStrategyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentImpactStrategyId__c</fullName>
    <label>Parent Impact Strategy</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentImpactStrategyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>