force-app/main/default/objects/ssot__ImpactStrategy__dlm/fields/ssot__rel_1716668782570_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668782570_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ImpactStrategy_ParentImpactStrategyI_rel</label>
    <referenceTo>ssot__ImpactStrategy__dlm</referenceTo>
    <relationshipLabel>ImpactStrategy_ParentImpactStrategyI_rel</relationshipLabel>
    <relationshipName>rel_1716668782570_end</relationshipName>
    <type>Lookup</type>
</CustomField>